examples/invalid_typed_messages/unknown_field_type.argx
module invalid.unknown_field
type Message { value: mystery }
